--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,2 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-*.netbeans_automatic_build
-
-# Other
-*.cbfilter
-*.cmd
-*.cbsettings
-*.cbhotkeys
-**/nbproject/private/
-**/nbproject/Makefile-*.mk
-**/nbproject/Package-*.bash
-PoECraftingAssistant/
-PoECraftingAssistant_Test/
-PoECraftingAssistant.jar
-build/
-build/build-jar.properties
-build/built-jar.properties
-nbbuild/
-dist/*
-nbdist/
-other/*
-store/*
-*.stackdump
-build/classes/resources/*
-nbproject/
-roadmap.txt
-pics/*
-pics/
-
-
-.idea
-*.iml
-savedDOwnload.txt
-Post.txt
+__pycache__/
+*.pyc
